# agentic-simulator-tutorial

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  temp.csv  temp.py  verify_api_key.py  verify_llm_registry.py  verify_setup.py
deploy/: README.md  postgres.Dockerfile
deploy/k8s/base/: resources.yaml
deploy/k8s/overlays/aws/: kustomization.yaml
deploy/k8s/overlays/k8s-desktop/: kustomization.yaml
deploy/postgres-init/: 01-extensions.sql
docker/: docker-compose.yml
docker/postgres/: init.sql
docs/: advanced_ai_engineering_learning_rubric.md  rubric-integration-plan.md  step-10-12-design.md  wildfire-domain-inventory.md  wildfire-domain-realism.md
docs/agent_design/: 01_scope.md  02_architecture.md  03_validation.md  04_component_a_heatmap.md  05_component_b_resources.md  06_component_c_ics209.md  07_scenarios.md
scripts/conversions/: lpnf_grid_to_csv.py
scripts/data_wrangling/scenario_data/: lpnf-south.json  test_coverage_scenarios.json
scripts/data_wrangling/world_builder/: README.md  calibrations.py  landfire.py  raws.py
scripts/data_wrangling/world_builder/cli/: __init__.py  fetch_raws_stations.py
scripts/raw/: lpnf_grid_cells.csv  sensor_overlay.csv  sensors.jsonl
src/: __init__.py  config.py  exceptions.py  logging_config.py
src/agents/: __init__.py  routing.py  schemas.py  state_types.py
src/agents/cluster/: __init__.py  cluster_graph.py  graph.py  node_tracer.py  nodes.py  state.py
src/agents/commons/: __init__.py  agent_dependencies.py  geo.py  llm_registry.py  node_executor.py  node_metrics.py  node_types.py  risk_view.py  routing.py  schemas.py  state_types.py  token_callback.py
src/agents/logistics/: __init__.py  graph.py  nodes.py  state.py
src/agents/logistics/tools/: README.md  __init__.py  advisory.py  resources.py  wildfires.py
src/agents/logistics/tools/backlog/: resources.py  spread.py  wind_history.py
src/agents/supervisor/: __init__.py  graph.py  nodes.py  state.py
src/domains/: __init__.py
src/domains/wildfire/: __init__.py  cell_state.py  environment.py  nwcg_resources.py  physics.py  rothermel_physics.py  sampler.py  scenario_loader.py  scenarios.py  sensors.py
src/domains/wildfire/scenario_data/: lpnf-corridor-to-coast.json  lpnf-corridor-to-coast.md  lpnf-south.json
src/domains/wildfire/world_builder/: README.md  __init__.py  calibrations.py  landfire.py  raws.py  regions.py
src/domains/wildfire/world_builder/cli/: build_scenario.py  fetch_raws_stations.py
src/llm/: llm_registry.py  token_callback.py
src/prompts/: __init__.py  filters.py  registry.py
src/prompts/templates/classify/v1/: manifest.yaml  prompt.j2
src/prompts/templates/evaluate/v1/: manifest.yaml  prompt.j2
src/resources/: __init__.py  base.py  evaluator.py  inventory.py
src/runtime/: __init__.py  composition.py  contract.py  facade.py  graph_client.py  orchestrator.py  profiles.py
src/runtime/entrypoints/: __init__.py  consumer.py  local.py  producer.py
src/sensors/: __init__.py  base.py  publisher.py
src/stores/: README.md  __init__.py  advisory_repo.py  base.py  cli.py  pg_gateway.py  resources_repo.py  schemas.py  sensor_repo.py  terrain_repo.py  wildfire_repo.py  world_state.py
src/stores/conversions/: convert_sensors.py
src/stores/mock/: __init__.py  advisory_repo.py  data_store.py  resources_repo.py  sensor_repo.py  terrain_repo.py  wildfire_repo.py
src/stores/mock/data/: resources.json  sensors.json  terrain.json  wildfire_activity.json
src/stores/postgres/: __init__.py  advisory_repo.py  data_store.py  gateway.py  resources_repo.py  sensor_repo.py  terrain_repo.py  wildfire_repo.py
src/stores/sql/data/: terrain.sql
src/stores/sql/ddl/: ddl.sql
src/tools/: advisory.py  resources.py  wildfires.py
src/transport/: __init__.py  queue.py  schemas.py  topics.py
src/world/: __init__.py  cell_state.py  cell_state_manager.py  coverage_index.py  directions.py  environment.py  generic_engine.py  generic_grid.py  grid.py  heat_map.py  physics.py  risk_heat_map.py  sector_analysis.py  sensor_inventory.py  trend_analyzer.py
src/world/domains/wildfire/: __init__.py  cell_state.py  fuel_models.py  physics.py  rothermel_physics.py  sampler.py  scenario_loader.py  scenarios.py  sensors.py
src/world/resources/: __init__.py  base.py  inventory.py
src/world/sensors/: __init__.py  base.py  publisher.py
src/world/transport/: __init__.py  broker.py  port.py  queue.py
tests/: conftest.py  test_cell_state_manager.py  test_config.py  test_event_consumer.py  test_heat_map_integration.py  test_risk_heat_map.py  test_runtime_facade.py  test_trend_analyzer.py
tests/agents/: conftest.py  test_cluster.py  test_logistics.py  test_logistics_sector_analysis.py  test_supervisor.py
tests/domains/wildfire/: test_cell_state.py  test_environment.py  test_fuel_models.py  test_nwcg_resources.py  test_physics.py  test_rothermel_physics.py  test_scenarios.py  test_sensors.py
tests/resources/: test_base.py
tests/sensors/: test_base.py  test_publisher.py  test_world_sensors.py
tests/transport/: conftest.py  test_queue.py  test_schemas.py  test_topics.py
tests/world/: test_cell_state.py  test_engine.py  test_fire_spread.py  test_generic_engine.py  test_generic_grid.py  test_grid.py  test_physics.py  test_scenarios.py  test_sensor_inventory.py
tutorial/: TUTORIAL_APPROACH.md
tutorial/architecture/: persistence-and-event-pipeline.md  system-design.md
tutorial/content/: 00-setup.md  01-world-engine-and-grid.md  02-cluster-agent-stub.md  03-node-tracer.md  04-prompt-registry.md  05-llm-registry.md  05-node-tracer.md  06-routing-helpers.md  07-cluster-agent-llm.md  08-full-sensor-agent-pipeline.md  09-supervisor-agent-stub.md  10-supervisor-agent-llm.md  11-resources-plus-supervisor-tools.md  12-full-pipeline-everything-wired.md  13-scenario-knobs-resilience.md  14-evaluation-ground-truth-vs-agent.md  CHANGES.md  overview.md  rubric.md
tutorial/stash/: _02-save-cluster-agent-stub.md  node_tracer.py
tutorial/user-guide/: 03-ai-agents-and-detection.md
(+11 files in other folders)
