[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "world-simulator"
version = "0.1.0"
description = "Event-driven world simulation engine with LangGraph agent runtime"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Chris Lomeli"}
]
keywords = ["langgraph", "agent", "simulation", "wildfire", "world-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=1.1.12",
    "langchain-anthropic>=1.4.0",
    "ipykernel>=7.2.0",
    "structlog>=25.5.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "langchain-ollama>=1.1.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "geopandas>=1.1.3",
]

[project.optional-dependencies]
llm = [
    "langchain-openai>=0.2",
]
# Heavy geospatial stack used only by build-fuel-grid to
# regenerate the vendored LANDFIRE fuel grid. Not needed at runtime.
gis = [
    "rasterio>=1.3",
    "geopandas>=0.14",
    "pyproj>=3.6",
    "shapely>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "nbconvert>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "bridge", "config", "domains", "resources", "runtime", "sensors", "tools", "transport", "world"]

[project.scripts]
build-fuel-grid = "domains.wildfire.world_builder.cli.build_fuel_grid:main"
build-scenario = "domains.wildfire.world_builder.cli.build_scenario:main"
fetch-raws-stations = "domains.wildfire.world_builder.cli.fetch_raws_stations:main"

[project.urls]
Homepage = "https://github.com/chrislomeli/world-simulator"

[tool.hatch.build.targets.wheel]
packages = ["src/sensors", "src/tools", "src/domains", "src/transport", "src/bridge", "src/world", "src/agents", "src/resources", "src/runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["src"]
