[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "world-simulator"
version = "0.1.0"
description = "Event-driven world simulation engine with LangGraph agent runtime"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Chris Lomeli"}
]
keywords = ["langgraph", "agent", "simulation", "wildfire", "world-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=1.1.12",
    "langchain-anthropic>=1.4.0",
    "ipykernel>=7.2.0",
    "structlog>=25.5.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "langchain-ollama>=1.1.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "geopandas>=1.1.3",
    "pgvector>=0.4.2",
    "psycopg-binary>=3.3.4",
    "psycopg-pool>=3.3.1",
    "psycopg>=3.3.4",
]

[project.optional-dependencies]
llm = [
    "langchain-openai>=0.2",
]
# Heavy geospatial stack used only by build-fuel-grid to
# regenerate the vendored LANDFIRE fuel grid. Not needed at runtime.
gis = [
    "rasterio>=1.3",
    "geopandas>=0.14",
    "pyproj>=3.6",
    "shapely>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "nbconvert>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "config", "exceptions", "llm", "logging_config", "prompts", "runtime", "stores", "tools", "world"]

# Per-role runtime entry points — one container = one process = one of
# these. Equivalent to `python -m runtime.entrypoints.<role>`.
[project.scripts]
wildfire-local = "runtime.entrypoints.local:main"
wildfire-producer = "runtime.entrypoints.producer:main"
wildfire-consumer = "runtime.entrypoints.consumer:main"

# NOTE: the world-builder data-wrangling CLIs live under scripts/ (not on the
# package path) and are dev tooling, not runtime — so they are intentionally
# NOT exposed here. They are run directly (`uv run python scripts/...`).

[project.urls]
Homepage = "https://github.com/chrislomeli/world-simulator"

[tool.hatch.build.targets.wheel]
# Idiomatic src-layout: `sources = ["src"]` strips the leading "src/" for
# the built wheel, so everything under src/ — the packages AND the loose
# top-level modules (config.py, exceptions.py, logging_config.py) —
# imports as top-level. One rule, no per-module force-include.
#
# Crucially this also makes the *editable* install a redirect to src/
# (no physical copies in site-packages), so editing src/ is live and
# nothing can shadow it. `only-include` keeps the wheel to src/ contents.
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["src"]
